@startuml

title __INDICATORS's Class Diagram__\n

  namespace com.stroganov {
    namespace Indicators {
      abstract class com.stroganov.Indicators.AbstractIndicator {
          ~ arrayListIndicator : ArrayList<Double>
          ~ candlesArrayList : ArrayList<Candle>
          ~ period : int
          + AbstractIndicator()
          {abstract} + calculateIndicator()
          + getArrayListIndicator()
          + saveArrayIndicatorFile()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.EMA {
          + EMA()
          + calculateIndicator()
          - calcFirstCandleEMA()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.IndicatorContainer {
          ~ indicators : AbstractIndicator[]
          + IndicatorContainer()
          + getIndicatorByPeriod()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.Momentum {
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.RSA_Indicator {
          + RSA_Indicator()
          + calculateIndexOneCandle()
          + calculateIndicator()
          - average()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.RSA_Indicator2 {
          + RSA_Indicator2()
          + calculateIndicator()
          - calcRSI()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.SMA {
          + SMA()
          + calculateIndicator()
          + calculateSMAOneCandle()
      }
    }
  }
  

  namespace com.stroganov {
    namespace Indicators {
      class com.stroganov.Indicators.SMMA {
      }
    }
  }
  

  com.stroganov.Indicators.EMA -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.IndicatorContainer o-- com.stroganov.Indicators.AbstractIndicator : abstractIndicator
  com.stroganov.Indicators.IndicatorContainer o-- com.stroganov.CandleStream : candleStream
  com.stroganov.Indicators.RSA_Indicator -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.RSA_Indicator2 -up-|> com.stroganov.Indicators.AbstractIndicator
  com.stroganov.Indicators.SMA -up-|> com.stroganov.Indicators.AbstractIndicator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
